# chord-striker

./: .gitignore  README.md  makefile  pyproject.toml
chord_striker/: __init__.py  _resources.py  chorder.py  create_chord_chart.py  helper_fns.py  hit_maker.py  load_constants.py  probabilistic_dag.py  section.py  song_structure.py
chord_striker/constants/: __init__.py
chord_striker/constants/defaults/: chord_change_probs.yaml  chord_extensions.yaml  famous_chord_progressions.yaml  key_probs.yaml  structure_params.yaml
chord_striker/lilypond_assets/: chord_chart_bar_lines.ly  chord_extensions.ly
constants/: chord_change_probs.yaml  chord_extensions.yaml  structure_params.yaml
constants/defaults/: chord_change_probs.yaml  chord_extensions.yaml  famous_chord_progressions.yaml  key_probs.yaml  song_structure_stats.yaml  structure_params.yaml
docker/: Dockerfile  requirements.txt
example/: Example.ly  Example.midi  Example_chords.ly
lilypond_assets/: add_tempo.ly  chord_chart_bar_lines.ly  slash_symbol.ly
scripts/: audit_songs.py  process_mcgill_dataset.py  query_hooktheory.py
tests/: __init__.py  conftest.py  test_hit_maker.py
