[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chord-striker"
version = "0.1.0"
description = "A Python library for generating random harmonic song structures with PDF chord charts and MIDI files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "hlm628"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Abjad>=3.1",
    "pychord==0.4.1",
    "PyLaTeX>=1.3.1",
    "roman>=3.3",
    "numpy>=1.21.0",
    "scipy>=1.10.1",
    "networkx>=2.6.0",
    "pydot>=1.4.1",
    "pandas>=1.4.0",
    "PyYAML>=5.2",
    "appdirs>=1.4.4",
    "attrs>=18.2.0",
    "ordered-set>=3.1.1",
    "packaging>=20.4",
    "python-dateutil>=2.8.1",
    "requests>=2.24.0",
    "six>=1.13.0",
    "Unidecode>=1.1.1",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.11.0",
]
graph = [
    "pygraphviz>=1.7",
]

[project.scripts]
chord-striker = "chord_striker.hit_maker:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["chord_striker*"]

[tool.setuptools.package-data]
"chord_striker" = [
    "constants/defaults/*.yaml",
    "lilypond_assets/*.ly",
]

# Ruff config {{{
[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
]

[tool.ruff.lint.per-file-ignores]
# Disable some checks in tests
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# https://docs.astral.sh/ruff/formatter/#docstring-formatting
docstring-code-format = true
docstring-code-line-length = 88
# }}}